--- a/index.html
+++ b/index.html
@@ -757,6 +757,7 @@
     <link rel="stylesheet" href="css/calendar.vibrant-colors.css">
     <link rel="stylesheet" href="css/calendar.viking-helmet.css">
     <link rel="stylesheet" href="css/calendar.viktoria-falls.css">
+    <link rel="stylesheet" href="css/calendar.waikiki-after-dark.css">
     <link rel="stylesheet" href="css/calendar.waikiki-beach.css">
     <link rel="stylesheet" href="css/calendar.watermelon.css">
     <link rel="stylesheet" href="css/calendar.weekend-downtime.css">
@@ -1759,6 +1760,7 @@
                 <option value="vibrant-colors">Vibrant Colors</option>
                 <option value="viking-helmet">Viking Helmet</option>
                 <option value="viktoria-falls">Viktoria Falls</option>
+                <option value="waikiki-after-dark">Waikiki after Dark</option>
                 <option value="waikiki-beach">Waikiki Beach</option>
                 <option value="watermelon">Watermelon</option>
                 <option value="weekend-downtime">Weekend Downtime</option>
