--- a/index.html
+++ b/index.html
@@ -700,6 +700,7 @@
     <link rel="stylesheet" href="css/calendar.the-deepest-point.css">
     <link rel="stylesheet" href="css/calendar.the-desert-line.css">
     <link rel="stylesheet" href="css/calendar.the-element-of-surprise.css">
+    <link rel="stylesheet" href="css/calendar.the-final-match.css">
     <link rel="stylesheet" href="css/calendar.the-final-step.css">
     <link rel="stylesheet" href="css/calendar.the-finest-green-tea.css">
     <link rel="stylesheet" href="css/calendar.the-first-prize.css">
@@ -1702,6 +1703,7 @@
                 <option value="the-deepest-point">The Deepest Point</option>
                 <option value="the-desert-line">The Desert Line</option>
                 <option value="the-element-of-surprise">The Element of Surprise</option>
+                <option value="the-final-match">The Final Match</option>
                 <option value="the-final-step">The Final Step</option>
                 <option value="the-finest-green-tea">The Finest Green Tea</option>
                 <option value="the-first-prize">The First Prize</option>
