--- a/index.html
+++ b/index.html
@@ -374,6 +374,7 @@
     <link rel="stylesheet" href="css/calendar.imaginary-world.css">
     <link rel="stylesheet" href="css/calendar.in-adriatic-waters.css">
     <link rel="stylesheet" href="css/calendar.indigo-jeans.css">
+    <link rel="stylesheet" href="css/calendar.in-my-control.css">
     <link rel="stylesheet" href="css/calendar.in-my-style.css">
     <link rel="stylesheet" href="css/calendar.inspiration-line.css">
     <link rel="stylesheet" href="css/calendar.intelligence-quotient.css">
@@ -1379,6 +1380,7 @@
                 <option value="imaginary-world">Imaginary World</option>
                 <option value="in-adriatic-waters">In Adriatic Waters</option>
                 <option value="indigo-jeans">Indigo Jeans</option>
+                <option value="in-my-control">In My Control</option>
                 <option value="in-my-style">In My Style</option>
                 <option value="inspiration-line">Inspiration Line</option>
                 <option value="intelligence-quotient">Intelligence Quotient</option>
