--- a/index.html
+++ b/index.html
@@ -662,6 +662,7 @@
     <link rel="stylesheet" href="css/calendar.strong-and-free.css">
     <link rel="stylesheet" href="css/calendar.strong-foundation.css">
     <link rel="stylesheet" href="css/calendar.style-spectrum.css">
+    <link rel="stylesheet" href="css/calendar.successful-implementation.css">
     <link rel="stylesheet" href="css/calendar.success-key.css">
     <link rel="stylesheet" href="css/calendar.success-motivation.css">
     <link rel="stylesheet" href="css/calendar.success-story.css">
@@ -1666,6 +1667,7 @@
                 <option value="strong-and-free">Strong & Free</option>
                 <option value="strong-foundation">Strong Foundation</option>
                 <option value="style-spectrum">Style Spectrum</option>
+                <option value="successful-implementation">Successful Implementation</option>
                 <option value="success-key">Success Key</option>
                 <option value="success-motivation">Success Motivation</option>
                 <option value="success-story">Success Story</option>
