--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     <link rel="stylesheet" href="css/calendar.battle-of-the-ice.css">
     <link rel="stylesheet" href="css/calendar.beachfront-paradise.css">
     <link rel="stylesheet" href="css/calendar.beautiful-winter.css">
+    <link rel="stylesheet" href="css/calendar.bee-farm.css">
     <link rel="stylesheet" href="css/calendar.bermuda-triangle.css">
     <link rel="stylesheet" href="css/calendar.best-kept-secret.css">
     <link rel="stylesheet" href="css/calendar.best-of-technology.css">
@@ -1088,6 +1089,7 @@
                 <option value="battle-of-the-ice">Battle of the Ice</option>
                 <option value="beachfront-paradise">Beachfront Paradise</option>
                 <option value="beautiful-winter">Beautiful Winter</option>
+                <option value="bee-farm">Bee Farm</option>
                 <option value="bermuda-triangle">Bermuda Triangle</option>
                 <option value="best-kept-secret">Best Kept Secret</option>
                 <option value="best-of-technology">Best of Technology</option>
