--- a/index.html
+++ b/index.html
@@ -770,6 +770,7 @@
     <link rel="stylesheet" href="css/calendar.west-hollywood.css">
     <link rel="stylesheet" href="css/calendar.whale-shark.css">
     <link rel="stylesheet" href="css/calendar.when-style-speaks-first.css">
+    <link rel="stylesheet" href="css/calendar.where-the-ocean-begins.css">
     <link rel="stylesheet" href="css/calendar.white-cherry-tree.css">
     <link rel="stylesheet" href="css/calendar.white-shark.css">
     <link rel="stylesheet" href="css/calendar.white-steamboat.css">
@@ -1777,6 +1778,7 @@
                 <option value="west-hollywood">West Hollywood</option>
                 <option value="whale-shark">Whale Shark</option>
                 <option value="when-style-speaks-first">When Style Speaks First</option>
+                <option value="where-the-ocean-begins">Where the Ocean Begins</option>
                 <option value="white-cherry-tree">White Cherry Tree</option>
                 <option value="white-shark">White Shark</option>
                 <option value="white-steamboat">White Steamboat</option>
