--- a/index.html
+++ b/index.html
@@ -541,6 +541,7 @@
     <link rel="stylesheet" href="css/calendar.palm-beach-aruba.css">
     <link rel="stylesheet" href="css/calendar.palm-tree.css">
     <link rel="stylesheet" href="css/calendar.panther-lake.css">
+    <link rel="stylesheet" href="css/calendar.park-avenue-new-york.css">
     <link rel="stylesheet" href="css/calendar.patagonian-shores.css">
     <link rel="stylesheet" href="css/calendar.patagonian-sky.css">
     <link rel="stylesheet" href="css/calendar.perfect-afternoon.css">
@@ -1548,6 +1549,7 @@
                 <option value="palm-beach-aruba">Palm Beach Aruba</option>
                 <option value="palm-tree">Palm Tree</option>
                 <option value="panther-lake">Panther Lake</option>
+                <option value="park-avenue-new-york">Park Avenue New York</option>
                 <option value="patagonian-shores">Patagonian Shores</option>
                 <option value="patagonian-sky">Patagonian Sky</option>
                 <option value="perfect-afternoon">Perfect Afternoon</option>
