--- a/index.html
+++ b/index.html
@@ -1834,7 +1834,7 @@
             <a href="https://my.israelgives.org/en/fundme/Interactive_Calendar" target="_blank">
                 <button
                     style="background:#4d73ee; color:white; padding:10px 20px; border:none; border-radius:8px; font-size:16px; cursor:pointer;">
-                    💚 Support This Project on Bit +972587516163
+                    💚 Support This Project
                 </button>
             </a>
 
