--- a/index.html
+++ b/index.html
@@ -435,6 +435,7 @@
     <link rel="stylesheet" href="css/calendar.magic-colors.css">
     <link rel="stylesheet" href="css/calendar.magic-fly.css">
     <link rel="stylesheet" href="css/calendar.magic-island.css">
+    <link rel="stylesheet" href="css/calendar.magic-square.css">
     <link rel="stylesheet" href="css/calendar.magnificent-symbol.css">
     <link rel="stylesheet" href="css/calendar.main-stream.css">
     <link rel="stylesheet" href="css/calendar.mammoth-tusk.css">
@@ -1445,6 +1446,7 @@
                 <option value="magic-colors">Magic Colors</option>
                 <option value="magic-fly">Magic Fly</option>
                 <option value="magic-island">Magic Island</option>
+                <option value="magic-square">Magic Square</option>
                 <option value="magnificent-symbol">Magnificent Symbol</option>
                 <option value="mammoth-tusk">Mammoth Tusk</option>
                 <option value="manchester-city">Manchester City</option>
