--- a/index.html
+++ b/index.html
@@ -670,6 +670,7 @@
     <link rel="stylesheet" href="css/calendar.success-motivation.css">
     <link rel="stylesheet" href="css/calendar.success-story.css">
     <link rel="stylesheet" href="css/calendar.summer-breeze.css">
+    <link rel="stylesheet" href="css/calendar.summer-is-back.css">
     <link rel="stylesheet" href="css/calendar.summer-sky.css">
     <link rel="stylesheet" href="css/calendar.summer-vibes.css">
     <link rel="stylesheet" href="css/calendar.sunflower-fields.css">
@@ -1679,6 +1680,7 @@
                 <option value="success-motivation">Success Motivation</option>
                 <option value="success-story">Success Story</option>
                 <option value="summer-breeze">Summer Breeze</option>
+                <option value="summer-is-back">Summer is Back</option>
                 <option value="summer-sky">Summer Sky</option>
                 <option value="summer-vibes">Summer Vibes</option>
                 <option value="sunflower-fields">Sunflower Fields</option>
