--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
     <link rel="stylesheet" href="css/calendar.frozen-magic.css">
     <link rel="stylesheet" href="css/calendar.frozen-wilderness.css">
     <link rel="stylesheet" href="css/calendar.full-pink-moon.css">
+    <link rel="stylesheet" href="css/calendar.full-sunshine-mode.css">
     <link rel="stylesheet" href="css/calendar.fun-activity.css">
     <link rel="stylesheet" href="css/calendar.galactic-glow.css">
     <link rel="stylesheet" href="css/calendar.game-changer.css">
@@ -1317,6 +1318,7 @@
                 <option value="frozen-magic">Frozen Magic</option>
                 <option value="frozen-wilderness">Frozen Wilderness</option>
                 <option value="full-pink-moon">Full Pink Moon</option>
+                <option value="full-sunshine-mode">Full Sunshine Mode</option>
                 <option value="fun-activity">Fun Activity</option>
                 <option value="galactic-glow">Galactic Glow</option>
                 <option value="game-changer">Game Changer</option>
