--- a/index.html
+++ b/index.html
@@ -654,6 +654,7 @@
     <link rel="stylesheet" href="css/calendar.steel-shadows.css">
     <link rel="stylesheet" href="css/calendar.still-a-highlight.css">
     <link rel="stylesheet" href="css/calendar.stockholm-roofs.css">
+    <link rel="stylesheet" href="css/calendar.straight-into-paradise.css">
     <link rel="stylesheet" href="css/calendar.straight-to-the-point.css">
     <link rel="stylesheet" href="css/calendar.strategic-advantage.css">
     <link rel="stylesheet" href="css/calendar.strategic-planning.css">
@@ -1665,6 +1666,7 @@
                 <option value="steel-shadows">Steel Shadows</option>
                 <option value="still-a-highlight">Still a Highlight</option>
                 <option value="stockholm-roofs">Stockholm Roofs</option>
+                <option value="straight-into-paradise">Straight into Paradise</option>
                 <option value="straight-to-the-point">Straight to the Point</option>
                 <option value="strategic-advantage">Strategic Advantage</option>
                 <option value="strategic-planning">Strategic Planning</option>
