--- a/index.html
+++ b/index.html
@@ -502,6 +502,7 @@
     <link rel="stylesheet" href="css/calendar.night-mode-design.css">
     <link rel="stylesheet" href="css/calendar.night-ninja.css">
     <link rel="stylesheet" href="css/calendar.night-sky.css">
+    <link rel="stylesheet" href="css/calendar.ninety-nine-nights.css">
     <link rel="stylesheet" href="css/calendar.no-place-like-home.css">
     <link rel="stylesheet" href="css/calendar.northern-lights.css">
     <link rel="stylesheet" href="css/calendar.northern-nights.css">
@@ -797,7 +798,7 @@
     <link rel="stylesheet" href="css/calendar.your-wildest-dreams.css">
     <link rel="stylesheet" href="css/calendar.your-wildest-guess.css">
     <link rel="stylesheet" href="css/calendar.zodiac-constellations.css">
-
+    
     <!-- Custom Styles -->
     <style>
         /* General Styles */
@@ -1515,6 +1516,7 @@
                 <option value="night-mode-design">Night Mode Design</option>
                 <option value="night-ninja">Night Ninja</option>
                 <option value="night-sky">Night Sky</option>
+                <option value="ninety-nine-nights">99 Nights</option>
                 <option value="no-place-like-home">No Place like Home</option>
                 <option value="northern-lights">Northern Lights</option>
                 <option value="northern-nights">Northern Nights</option>
@@ -1811,6 +1813,7 @@
                 <option value="your-wildest-dreams">Your Wildest Dreams</option>
                 <option value="your-wildest-guess">Your Wildest Guess</option>
                 <option value="zodiac-constellations">Zodiac Constellations</option>
+                
             </select>
         </div>
 
