--- a/index.html
+++ b/index.html
@@ -512,6 +512,7 @@
     <link rel="stylesheet" href="css/calendar.ocean-beach.css">
     <link rel="stylesheet" href="css/calendar.ocean-dreams.css">
     <link rel="stylesheet" href="css/calendar.ocean-drive.css">
+    <link rel="stylesheet" href="css/calendar.ocean-eleven.css">
     <link rel="stylesheet" href="css/calendar.oceanfront-elegance.css">
     <link rel="stylesheet" href="css/calendar.ocean-parkway.css">
     <link rel="stylesheet" href="css/calendar.ocean-surf.css">
@@ -1526,6 +1527,7 @@
                 <option value="ocean-beach">Ocean Beach</option>
                 <option value="ocean-dreams">Ocean Dreams</option>
                 <option value="ocean-drive">Ocean Drive</option>
+                <option value="ocean-eleven">Ocean 11</option>
                 <option value="oceanfront-elegance">Oceanfront Elegance</option>
                 <option value="ocean-parkway">Ocean Parkway</option>
                 <option value="ocean-surf">Ocean Surf</option>
