--- a/index.html
+++ b/index.html
@@ -1527,7 +1527,7 @@
                 <option value="ocean-beach">Ocean Beach</option>
                 <option value="ocean-dreams">Ocean Dreams</option>
                 <option value="ocean-drive">Ocean Drive</option>
-                <option value="ocean-eleven">Ocean 11</option>
+                <option value="ocean-eleven">Ocean's 11</option>
                 <option value="oceanfront-elegance">Oceanfront Elegance</option>
                 <option value="ocean-parkway">Ocean Parkway</option>
                 <option value="ocean-surf">Ocean Surf</option>
