--- a/index.html
+++ b/index.html
@@ -499,6 +499,7 @@
     <link rel="stylesheet" href="css/calendar.next-steps.css">
     <link rel="stylesheet" href="css/calendar.niagara-falls.css">
     <link rel="stylesheet" href="css/calendar.night-dragon.css">
+    <link rel="stylesheet" href="css/calendar.night-fireflies.css">
     <link rel="stylesheet" href="css/calendar.night-mode-design.css">
     <link rel="stylesheet" href="css/calendar.night-ninja.css">
     <link rel="stylesheet" href="css/calendar.night-sky.css">
@@ -1514,6 +1515,7 @@
                 <option value="next-steps">Next Steps</option>
                 <option value="niagara-falls">Niagara Falls</option>
                 <option value="night-dragon">Night Dragon</option>
+                <option value="night-fireflies">Night Fireflies</option>
                 <option value="night-mode-design">Night Mode Design</option>
                 <option value="night-ninja">Night Ninja</option>
                 <option value="night-sky">Night Sky</option>
