--- a/index.html
+++ b/index.html
@@ -288,6 +288,7 @@
     <link rel="stylesheet" href="css/calendar.fairytale-charm.css">
     <link rel="stylesheet" href="css/calendar.fairytale-town.css">
     <link rel="stylesheet" href="css/calendar.fast-track.css">
+    <link rel="stylesheet" href="css/calendar.fifth-avenue.css">
     <link rel="stylesheet" href="css/calendar.fiji-islands.css">
     <link rel="stylesheet" href="css/calendar.finish-line.css">
     <link rel="stylesheet" href="css/calendar.fir-balsam.css">
@@ -1306,6 +1307,7 @@
                 <option value="fairytale-charm">Fairytale Charm</option>
                 <option value="fairytale-town">Fairytale Town</option>
                 <option value="fast-track">Fast Track</option>
+                <option value="fifth-avenue">Fifth Avenue</option>
                 <option value="fiji-islands">Fiji Islands</option>
                 <option value="finish-line">Finish Line</option>
                 <option value="fir-balsam">Fir Balsam</option>
