--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
     <link rel="stylesheet" href="css/calendar.classic-escape.css">
     <link rel="stylesheet" href="css/calendar.clean-code.css">
     <link rel="stylesheet" href="css/calendar.clean-energy.css">
+    <link rel="stylesheet" href="css/calendar.clouds-and-sea.css">
     <link rel="stylesheet" href="css/calendar.coastal-atlantic.css">
     <link rel="stylesheet" href="css/calendar.coastal-beauty.css">
     <link rel="stylesheet" href="css/calendar.coastal-gulf.css">
@@ -1193,6 +1194,7 @@
                 <option value="classic-escape">Classic Escape</option>
                 <option value="clean-code">Clean Code</option>
                 <option value="clean-energy">Clean Energy</option>
+                <option value="clouds-and-sea">Clouds & Sea</option>
                 <option value="coastal-atlantic">Coastal Atlantic</option>
                 <option value="coastal-beauty">Coastal Beauty</option>
                 <option value="coastal-gulf">Coastal Gulf</option>
