--- a/index.html
+++ b/index.html
@@ -317,6 +317,7 @@
     <link rel="stylesheet" href="css/calendar.giant-petrel.css">
     <link rel="stylesheet" href="css/calendar.global-impact.css">
     <link rel="stylesheet" href="css/calendar.glorious-day.css">
+    <link rel="stylesheet" href="css/calendar.glow-in-the-dark.css">
     <link rel="stylesheet" href="css/calendar.gold-coast.css">
     <link rel="stylesheet" href="css/calendar.golden-century.css">
     <link rel="stylesheet" href="css/calendar.golden-eagle.css">
@@ -1337,6 +1338,7 @@
                 <option value="giant-petrel">Giant Petrel</option>
                 <option value="global-impact">Global Impact</option>
                 <option value="glorious-day">Glorious Day</option>
+                <option value="glow-in-the-dark">Glow in the Dark</option>
                 <option value="gold-coast">Gold Coast</option>
                 <option value="golden-century">Golden Century</option>
                 <option value="golden-eagle">Golden Eagle</option>
