--- a/index.html
+++ b/index.html
@@ -751,6 +751,7 @@
     <link rel="stylesheet" href="css/calendar.tokyo-at-night.css">
     <link rel="stylesheet" href="css/calendar.too-beautiful-to-be-true.css">
     <link rel="stylesheet" href="css/calendar.toronto-raptors.css">
+    <link rel="stylesheet" href="css/calendar.trails-of-spring.css">
     <link rel="stylesheet" href="css/calendar.tropical-horizon.css">
     <link rel="stylesheet" href="css/calendar.tropical-islands.css">
     <link rel="stylesheet" href="css/calendar.tropical-jungle.css">
@@ -1771,6 +1772,7 @@
                 <option value="tokyo-at-night">Tokyo at Night</option>
                 <option value="too-beautiful-to-be-true">Too Beautiful to be True</option>
                 <option value="toronto-raptors">Toronto Raptors</option>
+                <option value="trails-of-spring">Trails of Spring</option>
                 <option value="tropical-horizon">Tropical Horizon</option>
                 <option value="tropical-islands">Tropical Islands</option>
                 <option value="tropical-jungle">Tropical Jungle</option>
