--- a/index.html
+++ b/index.html
@@ -728,6 +728,7 @@
     <link rel="stylesheet" href="css/calendar.the-highest-peak.css">
     <link rel="stylesheet" href="css/calendar.the-huge-event.css">
     <link rel="stylesheet" href="css/calendar.the-knight-of-the-sorrowful-countenance.css">
+    <link rel="stylesheet" href="css/calendar.the-land-of-fire-and-ice.css">
     <link rel="stylesheet" href="css/calendar.the-last-day-of-spring.css">
     <link rel="stylesheet" href="css/calendar.the-last-mohican.css">
     <link rel="stylesheet" href="css/calendar.the-last-paradise.css">
@@ -1748,6 +1749,7 @@
                 <option value="the-highest-peak">The Highest Peak</option>
                 <option value="the-huge-event">The Huge Event</option>
                 <option value="the-knight-of-the-sorrowful-countenance">The Knight of the Sorrowful Countenance</option>
+                <option value="the-land-of-fire-and-ice">The Land of Fire & Ice</option>
                 <option value="the-last-day-of-spring">The Last Day of Spring</option>
                 <option value="the-last-mohican">The Last Mohican</option>
                 <option value="the-last-paradise">The Last Paradise</option>
