--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
     <link rel="stylesheet" href="css/calendar.fast-track.css">
     <link rel="stylesheet" href="css/calendar.fifth-avenue.css">
     <link rel="stylesheet" href="css/calendar.fiji-islands.css">
+    <link rel="stylesheet" href="css/calendar.fine-tuning.css">
     <link rel="stylesheet" href="css/calendar.finish-line.css">
     <link rel="stylesheet" href="css/calendar.fir-balsam.css">
     <link rel="stylesheet" href="css/calendar.first-project.css">
@@ -1314,6 +1315,7 @@
                 <option value="fast-track">Fast Track</option>
                 <option value="fifth-avenue">Fifth Avenue</option>
                 <option value="fiji-islands">Fiji Islands</option>
+                <option value="fine-tuning">Fine Tuning</option>
                 <option value="finish-line">Finish Line</option>
                 <option value="fir-balsam">Fir Balsam</option>
                 <option value="first-project">First Project</option>
