--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
     <link rel="stylesheet" href="css/calendar.giant-petrel.css">
     <link rel="stylesheet" href="css/calendar.global-impact.css">
     <link rel="stylesheet" href="css/calendar.glorious-day.css">
+    <link rel="stylesheet" href="css/calendar.glowing-green-ocean-wave.css">
     <link rel="stylesheet" href="css/calendar.glow-in-the-dark.css">
     <link rel="stylesheet" href="css/calendar.gold-coast.css">
     <link rel="stylesheet" href="css/calendar.golden-century.css">
@@ -513,6 +514,7 @@
     <link rel="stylesheet" href="css/calendar.northern-nights.css">
     <link rel="stylesheet" href="css/calendar.north-pole.css">
     <link rel="stylesheet" href="css/calendar.north-pole-icebreaker.css">
+    <link rel="stylesheet" href="css/calendar.not-just-luxury.css">
     <link rel="stylesheet" href="css/calendar.now-is-your-moment.css">
     <link rel="stylesheet" href="css/calendar.ocean-beach.css">
     <link rel="stylesheet" href="css/calendar.ocean-dreams.css">
@@ -1342,6 +1344,7 @@
                 <option value="giant-petrel">Giant Petrel</option>
                 <option value="global-impact">Global Impact</option>
                 <option value="glorious-day">Glorious Day</option>
+                <option value="glowing-green-ocean-wave">Glowing Green Ocean Wave</option>
                 <option value="glow-in-the-dark">Glow in the Dark</option>
                 <option value="gold-coast">Gold Coast</option>
                 <option value="golden-century">Golden Century</option>
@@ -1535,7 +1538,8 @@
                 <option value="northern-nights">Northern Nights</option>
                 <option value="north-pole">North Pole</option>
                 <option value="north-pole-icebreaker">North Pole Icebreaker</option>
-                <option value="now-is-your-moment">NOW is Your Moment</option>
+                <option value="not-just-luxury">Not Just Luxury</option>
+                <option value="now-is-your-moment">Now is Your Moment</option>
                 <option value="ocean-beach">Ocean Beach</option>
                 <option value="ocean-dreams">Ocean Dreams</option>
                 <option value="ocean-drive">Ocean Drive</option>
