--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
     <link rel="stylesheet" href="css/calendar.business-class.css">
     <link rel="stylesheet" href="css/calendar.cacao-plantation.css">
     <link rel="stylesheet" href="css/calendar.cafe-de-colombia.css">
+    <link rel="stylesheet" href="css/calendar.cakobau-the-first-king-of-fiji.css">
     <link rel="stylesheet" href="css/calendar.california-sunshine.css">
     <link rel="stylesheet" href="css/calendar.camomile-flowers.css">
     <link rel="stylesheet" href="css/calendar.canary-islands.css">
@@ -1178,6 +1179,7 @@
                 <option value="business-class">Business Class</option>
                 <option value="cacao-plantation">Cacao Plantation</option>
                 <option value="cafe-de-colombia">Café de Colombia</option>
+                <option value="cakobau-the-first-king-of-fiji">Cakobau - the First King of Fiji</option>
                 <option value="california-sunshine">California Sunshine</option>
                 <option value="camomile-flowers">Camomile Flowers</option>
                 <option value="canary-islands">Canary Islands</option>
