--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
     <link rel="stylesheet" href="css/calendar.fine-tuning.css">
     <link rel="stylesheet" href="css/calendar.finish-line.css">
     <link rel="stylesheet" href="css/calendar.fir-balsam.css">
+    <link rel="stylesheet" href="css/calendar.fireplace-dream.css">
     <link rel="stylesheet" href="css/calendar.first-project.css">
     <link rel="stylesheet" href="css/calendar.flamingo-bay.css">
     <link rel="stylesheet" href="css/calendar.flamingo-sky.css">
@@ -1323,6 +1324,7 @@
                 <option value="fine-tuning">Fine Tuning</option>
                 <option value="finish-line">Finish Line</option>
                 <option value="fir-balsam">Fir Balsam</option>
+                <option value="fireplace-dream">Fireplace Dream</option>
                 <option value="first-project">First Project</option>
                 <option value="flamingo-bay">Flamingo Bay</option>
                 <option value="flamingo-sky">Flamingo Sky</option>
