--- a/index.html
+++ b/index.html
@@ -382,6 +382,7 @@
     <link rel="stylesheet" href="css/calendar.ice-palace.css">
     <link rel="stylesheet" href="css/calendar.iceland-volcanoes.css">
     <link rel="stylesheet" href="css/calendar.imaginary-world.css">
+    <link rel="stylesheet" href="css/calendar.impressive-monuriki.css">
     <link rel="stylesheet" href="css/calendar.in-adriatic-waters.css">
     <link rel="stylesheet" href="css/calendar.indigo-jeans.css">
     <link rel="stylesheet" href="css/calendar.in-my-control.css">
@@ -1411,6 +1412,7 @@
                 <option value="ice-palace">Ice Palace</option>
                 <option value="iceland-volcanoes">Iceland’s Volcanoes</option>
                 <option value="imaginary-world">Imaginary World</option>
+                <option value="impressive-monuriki">Impressive Monuriki</option>
                 <option value="in-adriatic-waters">In Adriatic Waters</option>
                 <option value="indigo-jeans">Indigo Jeans</option>
                 <option value="in-my-control">In My Control</option>
