--- a/index.html
+++ b/index.html
@@ -432,6 +432,7 @@
     <link rel="stylesheet" href="css/calendar.los-angeles.css">
     <link rel="stylesheet" href="css/calendar.los-angeles-lakers.css">
     <link rel="stylesheet" href="css/calendar.los-angeles-sky.css">
+    <link rel="stylesheet" href="css/calendar.lost-borders.css">
     <link rel="stylesheet" href="css/calendar.love-and-passion.css">
     <link rel="stylesheet" href="css/calendar.love-of-yesterday.css">
     <link rel="stylesheet" href="css/calendar.love-station.css">
@@ -1463,6 +1464,7 @@
                 <option value="los-angeles">Los Angeles</option>
                 <option value="los-angeles-lakers">Los Angeles Lakers</option>
                 <option value="los-angeles-sky">Los Angeles Sky</option>
+                <option value="lost-borders">Lost Borders</option>
                 <option value="love-and-passion">Love & Passion</option>
                 <option value="love-of-yesterday">Love of Yesterday</option>
                 <option value="love-station">Love Station</option>
