--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
     <link rel="stylesheet" href="css/calendar.free-flight.css">
     <link rel="stylesheet" href="css/calendar.free-imagination.css">
     <link rel="stylesheet" href="css/calendar.free-style.css">
+    <link rel="stylesheet" href="css/calendar.fresh-market.css">
     <link rel="stylesheet" href="css/calendar.fresh-start.css">
     <link rel="stylesheet" href="css/calendar.frontier-unknown.css">
     <link rel="stylesheet" href="css/calendar.frozen-magic.css">
@@ -1338,6 +1339,7 @@
                 <option value="free-flight">Free Flight</option>
                 <option value="free-imagination">Free Imagination</option>
                 <option value="free-style">Free Style</option>
+                <option value="fresh-market">Fresh Market</option>
                 <option value="fresh-start">Fresh Start</option>
                 <option value="frontier-unknown">Frontier Unknown</option>
                 <option value="frozen-magic">Frozen Magic</option>
