--- a/index.html
+++ b/index.html
@@ -729,6 +729,7 @@
     <link rel="stylesheet" href="css/calendar.the-final-step.css">
     <link rel="stylesheet" href="css/calendar.the-finest-green-tea.css">
     <link rel="stylesheet" href="css/calendar.the-first-prize.css">
+    <link rel="stylesheet" href="css/calendar.the-garden-island.css">
     <link rel="stylesheet" href="css/calendar.the-gold-standard.css">
     <link rel="stylesheet" href="css/calendar.the-great-silk-road.css">
     <link rel="stylesheet" href="css/calendar.the-great-wall.css">
@@ -1760,6 +1761,7 @@
                 <option value="the-final-step">The Final Step</option>
                 <option value="the-finest-green-tea">The Finest Green Tea</option>
                 <option value="the-first-prize">The First Prize</option>
+                <option value="the-garden-island">The Garden Island</option>
                 <option value="the-gold-standard">The Gold Standard</option>
                 <option value="the-great-silk-road">The Great Silk Road</option>
                 <option value="the-great-wall">The Great Wall</option>
