--- a/index.html
+++ b/index.html
@@ -811,6 +811,7 @@
     <link rel="stylesheet" href="css/calendar.wonderful-experience.css">
     <link rel="stylesheet" href="css/calendar.world-champion.css">
     <link rel="stylesheet" href="css/calendar.work-of-art.css">
+    <link rel="stylesheet" href="css/calendar.yasawa-islands.css">
     <link rel="stylesheet" href="css/calendar.yellow-eyed-penguin.css">
     <link rel="stylesheet" href="css/calendar.your-dreamland.css">
     <link rel="stylesheet" href="css/calendar.your-wildest-dreams.css">
@@ -1844,6 +1845,7 @@
                 <option value="wonderful-experience">Wonderful Experience</option>
                 <option value="world-champion">World Champion</option>
                 <option value="work-of-art">Work of Art</option>
+                <option value="yasawa-islands">Yasawa Islands</option>
                 <option value="yellow-eyed-penguin">Yellow-eyed Penguin</option>
                 <option value="your-dreamland">Your Dreamland</option>
                 <option value="your-wildest-dreams">Your Wildest Dreams</option>
