--- a/index.html
+++ b/index.html
@@ -450,6 +450,7 @@
     <link rel="stylesheet" href="css/calendar.magic-square.css">
     <link rel="stylesheet" href="css/calendar.magnificent-symbol.css">
     <link rel="stylesheet" href="css/calendar.main-stream.css">
+    <link rel="stylesheet" href="css/calendar.mamanuca-islands.css">
     <link rel="stylesheet" href="css/calendar.mammoth-tusk.css">
     <link rel="stylesheet" href="css/calendar.manchester-city.css">
     <link rel="stylesheet" href="css/calendar.manchester-united.css">
@@ -1484,6 +1485,7 @@
                 <option value="magic-island">Magic Island</option>
                 <option value="magic-square">Magic Square</option>
                 <option value="magnificent-symbol">Magnificent Symbol</option>
+                <option value="mamanuca-islands">Mamanuca Islands</option>
                 <option value="mammoth-tusk">Mammoth Tusk</option>
                 <option value="manchester-city">Manchester City</option>
                 <option value="manchester-united">Manchester United</option>
