--- a/index.html
+++ b/index.html
@@ -804,6 +804,7 @@
     <link rel="stylesheet" href="css/calendar.wild-escape.css">
     <link rel="stylesheet" href="css/calendar.wild-flower.css">
     <link rel="stylesheet" href="css/calendar.wild-orange.css">
+    <link rel="stylesheet" href="css/calendar.wild-reef.css">
     <link rel="stylesheet" href="css/calendar.wild-rose.css">
     <link rel="stylesheet" href="css/calendar.wild-tropics.css">
     <link rel="stylesheet" href="css/calendar.wild-wonders.css">
@@ -1839,6 +1840,7 @@
                 <option value="wild-escape">Wild Escape</option>
                 <option value="wild-flower">Wild Flower</option>
                 <option value="wild-orange">Wild Orange</option>
+                <option value="wild-reef">Wild Reef</option>
                 <option value="wild-rose">Wild Rose</option>
                 <option value="wild-tropics">Wild Tropics</option>
                 <option value="wild-wonders">Wild Wonders</option>
