--- a/index.html
+++ b/index.html
@@ -413,6 +413,7 @@
     <link rel="stylesheet" href="css/calendar.keep-shining.css">
     <link rel="stylesheet" href="css/calendar.key-to-progress.css">
     <link rel="stylesheet" href="css/calendar.kilimanjaro-outskirts.css">
+    <link rel="stylesheet" href="css/calendar.kingdom-of-britain.css">
     <link rel="stylesheet" href="css/calendar.lady-blue.css">
     <link rel="stylesheet" href="css/calendar.land-of-dreams.css">
     <link rel="stylesheet" href="css/calendar.lake-mcdonald.css">
@@ -1450,6 +1451,7 @@
                 <option value="keep-shining">Keep Shining</option>
                 <option value="key-to-progress">Key to Progress</option>
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
+                <option value="kingdom-of-britain">Kingdom of Britain</option>
                 <option value="lady-blue">Lady Blue</option>
                 <option value="lake-mcdonald">Lake McDonald</option>
                 <option value="land-of-dreams">Land of Dreams</option>
