--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
     <link rel="stylesheet" href="css/calendar.blue-island-waters.css">
     <link rel="stylesheet" href="css/calendar.blue-lagoon.css">
     <link rel="stylesheet" href="css/calendar.blue-marine.css">
+    <link rel="stylesheet" href="css/calendar.blue-moon.css">
     <link rel="stylesheet" href="css/calendar.blue-mountains.css">
     <link rel="stylesheet" href="css/calendar.blue-ocean.css">
     <link rel="stylesheet" href="css/calendar.blue-planet.css">
@@ -1165,6 +1166,7 @@
                 <option value="blue-island-waters">Blue Island Waters</option>
                 <option value="blue-lagoon">Blue Lagoon</option>
                 <option value="blue-marine">Blue Marine</option>
+                <option value="blue-moon">Blue Moon</option>
                 <option value="blue-mountains">Blue Mountains</option>
                 <option value="blue-ocean">Blue Ocean</option>
                 <option value="blue-planet">Blue Planet</option>
