--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
     <link rel="stylesheet" href="css/calendar.caribbean-sea.css">
     <link rel="stylesheet" href="css/calendar.celestial-objects.css">
     <link rel="stylesheet" href="css/calendar.centaurus-constellation.css">
+    <link rel="stylesheet" href="css/calendar.central-division.css">
     <link rel="stylesheet" href="css/calendar.cherry-garden.css">
     <link rel="stylesheet" href="css/calendar.chicago-bulls.css">
     <link rel="stylesheet" href="css/calendar.cinnamon-street.css">
@@ -1203,6 +1204,7 @@
                 <option value="caribbean-sea">Caribbean Sea</option>
                 <option value="celestial-objects">Celestial Objects</option>
                 <option value="centaurus-constellation">Centaurus Constellation</option>
+                <option value="central-division">Central Division</option>
                 <option value="cherry-garden">Cherry Garden</option>
                 <option value="chicago-bulls">Chicago Bulls</option>
                 <option value="core">Choose Layout Mode</option>
