--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <link rel="stylesheet" href="css/calendar.a-solitude-moment.css">
     <link rel="stylesheet" href="css/calendar.a-stunning-shoreline.css">
     <link rel="stylesheet" href="css/calendar.a-thing-of-beauty.css">
+    <link rel="stylesheet" href="css/calendar.atlantic-division.css">
     <link rel="stylesheet" href="css/calendar.a-turning-point.css">
     <link rel="stylesheet" href="css/calendar.autumn-harvest.css">
     <link rel="stylesheet" href="css/calendar.away-from-home.css">
@@ -1107,6 +1108,7 @@
                 <option value="a-solitude-moment">A Solitude Moment</option>
                 <option value="a-stunning-shoreline">A Stunning Shoreline</option>
                 <option value="a-thing-of-beauty">A Thing of Beauty</option>
+                <option value="atlantic-division">Atlantic Division</option>
                 <option value="a-turning-point">A Turning Point</option>
                 <option value="autumn-harvest">Autumn Harvest</option>
                 <option value="away-from-home">Away From Home</option>
