--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
     <link rel="stylesheet" href="css/calendar.blue-white.css">
     <link rel="stylesheet" href="css/calendar.blue-window.css">
     <link rel="stylesheet" href="css/calendar.bold-vision.css">
+    <link rel="stylesheet" href="css/calendar.boost-your-mood.css">
     <link rel="stylesheet" href="css/calendar.bora-bora.css">
     <link rel="stylesheet" href="css/calendar.boston-celtics.css">
     <link rel="stylesheet" href="css/calendar.box-of-surprises.css">
@@ -1182,6 +1183,7 @@
                 <option value="blue-white">Blue & White</option>
                 <option value="blue-window">Blue Window</option>
                 <option value="bold-vision">Bold Vision</option>
+                <option value="boost-your-mood">Boost Your Mood</option>
                 <option value="bora-bora">Bora Bora</option>
                 <option value="boston-celtics">Boston Celtics</option>
                 <option value="box-of-surprises">Box of Surprises</option>
