--- a/index.html
+++ b/index.html
@@ -700,6 +700,7 @@
     <link rel="stylesheet" href="css/calendar.summer-vibes.css">
     <link rel="stylesheet" href="css/calendar.sunflower-fields.css">
     <link rel="stylesheet" href="css/calendar.sunny-beach.css">
+    <link rel="stylesheet" href="css/calendar.sunny-garden.css">
     <link rel="stylesheet" href="css/calendar.sunrise-over-the-ocean.css">
     <link rel="stylesheet" href="css/calendar.sunset-beach.css">
     <link rel="stylesheet" href="css/calendar.sunset-magic.css">
@@ -1740,6 +1741,7 @@
                 <option value="summer-vibes">Summer Vibes</option>
                 <option value="sunflower-fields">Sunflower Fields</option>
                 <option value="sunny-beach">Sunny Beach</option>
+                <option value="sunny-garden">Sunny Garden</option>
                 <option value="sunrise-over-the-ocean">Sunrise over the Ocean</option>
                 <option value="sunset-beach">Sunset Beach</option>
                 <option value="sunset-magic">Sunset Magic</option>
