--- a/index.html
+++ b/index.html
@@ -619,6 +619,7 @@
     <link rel="stylesheet" href="css/calendar.road-to-nowhere.css">
     <link rel="stylesheet" href="css/calendar.robin-good.css">
     <link rel="stylesheet" href="css/calendar.rocky-mountains.css">
+    <link rel="stylesheet" href="css/calendar.rotuma-island.css">
     <link rel="stylesheet" href="css/calendar.royal-caribbean.css">
     <link rel="stylesheet" href="css/calendar.royal-crown.css">
     <link rel="stylesheet" href="css/calendar.sacramento-kings.css">
@@ -1661,6 +1662,7 @@
                 <option value="road-to-nowhere">Road to Nowhere</option>
                 <option value="robin-good">Robin Good</option>
                 <option value="rocky-mountains">Rocky Mountains</option>
+                <option value="rotuma-island">Rotuma Island</option>
                 <option value="royal-caribbean">Royal Caribbean</option>
                 <option value="royal-crown">Royal Crown</option>
                 <option value="sacramento-kings">Sacramento Kings</option>
