--- a/index.html
+++ b/index.html
@@ -556,6 +556,7 @@
     <link rel="stylesheet" href="css/calendar.our-favorite-hangout.css">
     <link rel="stylesheet" href="css/calendar.out-of-the-blue.css">
     <link rel="stylesheet" href="css/calendar.out-of-the-box.css">
+    <link rel="stylesheet" href="css/calendar.ovalau-island.css">
     <link rel="stylesheet" href="css/calendar.overnight-train.css">
     <link rel="stylesheet" href="css/calendar.over-the-seven-seas.css">
     <link rel="stylesheet" href="css/calendar.pacific-division.css">
@@ -1599,6 +1600,7 @@
                 <option value="our-favorite-hangout">Our Favorite Hangout</option>
                 <option value="out-of-the-blue">Out of the Blue</option>
                 <option value="out-of-the-box">Out of the Box</option>
+                <option value="ovalau-island">Ovalau Island</option>
                 <option value="overnight-train">Overnight Train</option>
                 <option value="over-the-seven-seas">Over the Seven Seas</option>
                 <option value="pacific-division">Pacific Division</option>
