--- a/index.html
+++ b/index.html
@@ -798,6 +798,7 @@
     <link rel="stylesheet" href="css/calendar.viktoria-falls.css">
     <link rel="stylesheet" href="css/calendar.waikiki-after-dark.css">
     <link rel="stylesheet" href="css/calendar.waikiki-beach.css">
+    <link rel="stylesheet" href="css/calendar.wakaya-island.css">
     <link rel="stylesheet" href="css/calendar.watermelon.css">
     <link rel="stylesheet" href="css/calendar.weekend-downtime.css">
     <link rel="stylesheet" href="css/calendar.weekend-mindset.css">
@@ -1843,6 +1844,7 @@
                 <option value="viktoria-falls">Viktoria Falls</option>
                 <option value="waikiki-after-dark">Waikiki after Dark</option>
                 <option value="waikiki-beach">Waikiki Beach</option>
+                <option value="wakaya-island">Wakaya Island</option>
                 <option value="watermelon">Watermelon</option>
                 <option value="weekend-downtime">Weekend Downtime</option>
                 <option value="weekend-mindset">Weekend Mindset</option>
