--- a/index.html
+++ b/index.html
@@ -532,6 +532,7 @@
     <link rel="stylesheet" href="css/calendar.ocean-drive.css">
     <link rel="stylesheet" href="css/calendar.ocean-eleven.css">
     <link rel="stylesheet" href="css/calendar.oceanfront-elegance.css">
+    <link rel="stylesheet" href="css/calendar.ocean-light.css">
     <link rel="stylesheet" href="css/calendar.ocean-parkway.css">
     <link rel="stylesheet" href="css/calendar.ocean-surf.css">
     <link rel="stylesheet" href="css/calendar.ocean-view.css">
@@ -1577,6 +1578,7 @@
                 <option value="ocean-drive">Ocean Drive</option>
                 <option value="ocean-eleven">Ocean's 11</option>
                 <option value="oceanfront-elegance">Oceanfront Elegance</option>
+                <option value="ocean-light">Ocean Light</option>
                 <option value="ocean-parkway">Ocean Parkway</option>
                 <option value="ocean-surf">Ocean Surf</option>
                 <option value="ocean-view">Ocean View</option>
