--- a/index.html
+++ b/index.html
@@ -666,6 +666,7 @@
     <link rel="stylesheet" href="css/calendar.soft-balance.css">
     <link rel="stylesheet" href="css/calendar.solar-flare.css">
     <link rel="stylesheet" href="css/calendar.something-special.css">
+    <link rel="stylesheet" href="css/calendar.south-sea-island.css">
     <link rel="stylesheet" href="css/calendar.space-force.css">
     <link rel="stylesheet" href="css/calendar.spark-of-knowledge.css">
     <link rel="stylesheet" href="css/calendar.spring-meadow.css">
@@ -1712,6 +1713,7 @@
                 <option value="soft-balance">Soft Balance</option>
                 <option value="solar-flare">Solar Flare</option>
                 <option value="something-special">Something Special</option>
+                <option value="south-sea-island">South Sea Island</option>
                 <option value="space-force">Space Force</option>
                 <option value="spark-of-knowledge">Spark of Knowledge</option>
                 <option value="spring-meadow">Spring Meadow</option>
