--- a/index.html
+++ b/index.html
@@ -771,6 +771,7 @@
     <link rel="stylesheet" href="css/calendar.time-complexity.css">
     <link rel="stylesheet" href="css/calendar.time-machine.css">
     <link rel="stylesheet" href="css/calendar.time-to-chill.css">
+    <link rel="stylesheet" href="css/calendar.tokoriki-island.css">
     <link rel="stylesheet" href="css/calendar.tokyo-at-night.css">
     <link rel="stylesheet" href="css/calendar.too-beautiful-to-be-true.css">
     <link rel="stylesheet" href="css/calendar.toronto-raptors.css">
@@ -1819,6 +1820,7 @@
                 <option value="time-complexity">Time Complexity</option>
                 <option value="time-machine">Time Machine</option>
                 <option value="time-to-chill">Time to Chill</option>
+                <option value="tokoriki-island">Tokoriki Island</option>
                 <option value="tokyo-at-night">Tokyo at Night</option>
                 <option value="too-beautiful-to-be-true">Too Beautiful to be True</option>
                 <option value="toronto-raptors">Toronto Raptors</option>
