--- a/index.html
+++ b/index.html
@@ -777,6 +777,7 @@
     <link rel="stylesheet" href="css/calendar.toronto-raptors.css">
     <link rel="stylesheet" href="css/calendar.totoya-island.css">
     <link rel="stylesheet" href="css/calendar.trails-of-spring.css">
+    <link rel="stylesheet" href="css/calendar.treasure-island.css">
     <link rel="stylesheet" href="css/calendar.tropical-horizon.css">
     <link rel="stylesheet" href="css/calendar.tropical-islands.css">
     <link rel="stylesheet" href="css/calendar.tropical-jungle.css">
@@ -1826,6 +1827,7 @@
                 <option value="toronto-raptors">Toronto Raptors</option>
                 <option value="totoya-island">Totoya Island</option>
                 <option value="trails-of-spring">Trails of Spring</option>
+                <option value="treasure-island">Treasure Island</option>
                 <option value="tropical-horizon">Tropical Horizon</option>
                 <option value="tropical-islands">Tropical Islands</option>
                 <option value="tropical-jungle">Tropical Jungle</option>
