--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     <link rel="stylesheet" href="css/calendar.back-to-paradise.css">
     <link rel="stylesheet" href="css/calendar.bamboo-flute.css">
     <link rel="stylesheet" href="css/calendar.banana-republic.css">
+    <link rel="stylesheet" href="css/calendar.batiki-island.css">
     <link rel="stylesheet" href="css/calendar.battle-of-the-ice.css">
     <link rel="stylesheet" href="css/calendar.beachfront-paradise.css">
     <link rel="stylesheet" href="css/calendar.beautiful-winter.css">
@@ -1131,6 +1132,7 @@
                 <option value="back-to-paradise">Back to Paradadise</option>
                 <option value="bamboo-flute">Bamboo Flute</option>
                 <option value="banana-republic">Banana Republic</option>
+                <option value="batiki-island">Batiki Island</option>
                 <option value="battle-of-the-ice">Battle of the Ice</option>
                 <option value="beachfront-paradise">Beachfront Paradise</option>
                 <option value="beautiful-winter">Beautiful Winter</option>
