--- a/index.html
+++ b/index.html
@@ -421,6 +421,7 @@
     <link rel="stylesheet" href="css/calendar.kilimanjaro-outskirts.css">
     <link rel="stylesheet" href="css/calendar.kingdom-of-britain.css">
     <link rel="stylesheet" href="css/calendar.lady-blue.css">
+    <link rel="stylesheet" href="css/calendar.lakeba-island.css">
     <link rel="stylesheet" href="css/calendar.land-of-dreams.css">
     <link rel="stylesheet" href="css/calendar.lake-mcdonald.css">
     <link rel="stylesheet" href="css/calendar.land-of-tomorrow.css">
@@ -1474,6 +1475,7 @@
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
                 <option value="kingdom-of-britain">Kingdom of Britain</option>
                 <option value="lady-blue">Lady Blue</option>
+                <option value="lakeba-island">Lakeba Island</option>
                 <option value="lake-mcdonald">Lake McDonald</option>
                 <option value="land-of-dreams">Land of Dreams</option>
                 <option value="land-of-tomorrow">Land of Tomorrow</option>
