--- a/index.html
+++ b/index.html
@@ -420,6 +420,7 @@
     <link rel="stylesheet" href="css/calendar.key-to-progress.css">
     <link rel="stylesheet" href="css/calendar.kilimanjaro-outskirts.css">
     <link rel="stylesheet" href="css/calendar.kingdom-of-britain.css">
+    <link rel="stylesheet" href="css/calendar.king-of-the-jungle.css">
     <link rel="stylesheet" href="css/calendar.lady-blue.css">
     <link rel="stylesheet" href="css/calendar.lakeba-island.css">
     <link rel="stylesheet" href="css/calendar.land-of-dreams.css">
@@ -1474,6 +1475,7 @@
                 <option value="key-to-progress">Key to Progress</option>
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
                 <option value="kingdom-of-britain">Kingdom of Britain</option>
+                <option value="king-of-the-jungle">King of the Jungle</option>
                 <option value="lady-blue">Lady Blue</option>
                 <option value="lakeba-island">Lakeba Island</option>
                 <option value="lake-mcdonald">Lake McDonald</option>
