--- a/index.html
+++ b/index.html
@@ -421,6 +421,7 @@
     <link rel="stylesheet" href="css/calendar.kilimanjaro-outskirts.css">
     <link rel="stylesheet" href="css/calendar.kingdom-of-britain.css">
     <link rel="stylesheet" href="css/calendar.king-of-the-jungle.css">
+    <link rel="stylesheet" href="css/calendar.koro-island.css">
     <link rel="stylesheet" href="css/calendar.lady-blue.css">
     <link rel="stylesheet" href="css/calendar.lakeba-island.css">
     <link rel="stylesheet" href="css/calendar.land-of-dreams.css">
@@ -1476,6 +1477,7 @@
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
                 <option value="kingdom-of-britain">Kingdom of Britain</option>
                 <option value="king-of-the-jungle">King of the Jungle</option>
+                <option value="koro-island">Koro Island</option>
                 <option value="lady-blue">Lady Blue</option>
                 <option value="lakeba-island">Lakeba Island</option>
                 <option value="lake-mcdonald">Lake McDonald</option>
